# youtube-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/youtube_downloader/: main.py
src/youtube_downloader/backend/: downloader.py
src/youtube_downloader/frontend/: app.py
src/youtube_downloader/utils/: config.py
